# opendav

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/maps/: 523_google_bg_bounds.json  523_google_bounds.json
docs/: PERFORMANCE_ENGINEERING.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md
exports/: porsche992_channels.txt
src/: dev_tools.rs  ibt_parser.rs  main.rs  scratch.rs  test_plot.rs
src/config/: mod.rs  settings.rs  worksheet.rs
src/data/: ibt_parser.rs  mod.rs
src/rendering/: mod.rs  motec_plot.rs  timing_plots.rs  track_map.rs
src/signals/: google_maps.rs  mapbox.rs  mod.rs  processing.rs  satellite_map.rs  track_map_generator.rs  track_map_svg.rs
src/simgit/: diff.rs  history.rs  manager.rs  mod.rs  setup_parser.rs
src/ui/: dashboard.rs  mod.rs  settings_tab.rs  setup_tab.rs  simgit_tab.rs  tabs.rs
