[package]
name = "opendav_rs"
version = "3.0.0"
edition = "2021"
authors = ["Arturo <arturo@opendav.com>"]
description = "High-performance virtual race engineering & telemetry workspace for iRacing"

[dependencies]
egui = "0.34.3"
eframe = { version = "0.34.3", features = ["glow"] }
egui_extras = { version = "0.34.3", features = ["image", "svg"] }
egui_plot = "0.35.0"
polars = { version = "0.41.3", features = ["csv", "temporal", "lazy"] }
ndarray = "0.15.6"
byteorder = "1.5.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
chrono = "0.4.45"
