[package]
name = "opendav_rs"
version = "0.9.0-rs"
edition = "2021"
authors = ["Arturo <arturo@opendav.com>"]
description = "High-performance virtual race engineering & telemetry workspace for iRacing"
default-run = "opendav_rs"

[dependencies]
egui = "0.34.3"
eframe = { version = "0.34.3", features = ["glow"] }
egui_extras = { version = "0.34.3", features = ["image", "svg"] }
egui_plot = "0.35.0"
polars = { version = "0.41.3", features = ["csv", "temporal", "lazy"] }
ndarray = "0.15.6"
byteorder = "1.5.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
chrono = "0.4.45"
image = "0.25.10"
regex = "1.12.4"
ureq = "3.3.0"
usvg = "0.47.0"
resvg = "0.47.0"
tiny-skia = "0.12.0"
rayon = "1.12.0"
inquire = "0.9.4"
indicatif = "0.18.6"

[features]
default = []
dev_tools = []
